--- a/css/board.css
+++ b/css/board.css
@@ -28,14 +28,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: calc(var(--cell-size) * 0.3);
-    color: transparent;
-    text-shadow: none;
 }
 
 .board__collector-slot--active {
-    color: #fdba74;
-    text-shadow: 0 3px 8px rgba(15, 23, 42, 0.7);
+    filter: drop-shadow(0 3px 8px rgba(15, 23, 42, 0.7));
+}
+
+.board__collector-icon {
+    width: calc(var(--cell-size) * 0.8);
+    height: calc(var(--cell-size) * 0.8);
 }
 
 .match-app--playing .board {
